2005-04-06  Chris Toshok  <toshok@ximian.com>

	* Gui/LocalsPad.cs: wrap the using MonoDevelop.DebuggerVisualizers
	with #if NET_2_0.
	(LocalsPad.VisualizerActivate): comment out an unworking line for
	the time being.

2005-04-06  Chris Toshok  <toshok@ximian.com>

	* Gui/LocalsPad.cs: (LocalsPad.OnStoppedEvent): the CurrentFrame
	field is of type StackFrame now, so move the cast to the
	DebuggingService instead of the stackframe.

	* Gui/StackTracePad.cs: same.

	* Gui/ThreadPad.cs (ThreadPad.UpdateThread): just set the values
	on the row, don't both comparing to the current value.

	* DebuggingService.cs (DebuggingService.target_output,
	DebuggingService.debugger_output): add Console.WriteLines here
	until I can get the debugger output pad to appear in the debug
	context.
	(DebuggingService.CurrentFrame): this property is now a
	StackFrame, not an object.

2005-04-05  Chris Toshok  <toshok@ximian.com>

	* Visualizers/Makefile.am (DLLS): add MonoDevelop.Debugger.dll.
	(ASSEMBLY): remove $(ADDIN_BUILD)/ from the assembly path/name.
	(build): add -g so we can get methods from the visualizer dll for
	calling in the debugger addin.

	* Visualizers/VisualizerObjectSource.cs
	(VisualizerObjectSource..ctor): remove the
	NotImplementedException.
	(VisualizerObjectSource.CreateReplacementObject): implement by
	deserializing the incoming stream.
	(VisualizerObjectSource.Deserialize): implement with a binary
	formatter.
	(VisualizerObjectSource.GetData): implement using
	VisualizerObjectSource.Serialize.
	(VisualizerObjectSource.Serialize): implement with a binary
	formatter.

	* Visualizers/TargetObjectProvider.cs
	(TargetObjectProvider.CreateVisualizerObjectSource): method used
	to create an instance of the visualizer's object source in the
	debugee process.
	(TargetObjectProvider.get_IsObjectReplaceable): return true.
	(TargetObjectProvider.GetObject): implement by using GetData and a
	binary formatter to deserialize the object.